--- a/flexi/docker/Dockerfile
+++ b/flexi/docker/Dockerfile
@@ -2,5 +2,6 @@ FROM nginx
 
 WORKDIR /usr/share/nginx/html
 
-# Copy the contents of the dist directory to the Nginx html directory
-COPY ./dist/ .
+# Copy the contents of the dist directory inside the flexi directory to the Nginx html directory
+COPY ./flexi/dist/ .
+
