--- a/flexi/docker/Dockerfile
+++ b/flexi/docker/Dockerfile
@@ -3,6 +3,4 @@ FROM nginx
 WORKDIR /usr/share/nginx/html
 
 # Copy the contents of the dist directory inside the flexi directory to the Nginx html directory
-COPY ../dist/ .
-
-
+COPY dist/ .
